// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`validate options should throw an error on the "attributes" option with "true" value 1`] = `
"Invalid options object. Mini CSS Extract Plugin has been initialized using an options object that does not match the API schema.
 - options.attributes should be an object:
   object { … }
   -> Adds custom attributes to tag (https://github.com/webpack-contrib/mini-css-extract-plugin#attributes)."
`;

exports[`validate options should throw an error on the "chunkFilename" option with "true" value 1`] = `
"Invalid options object. Mini CSS Extract Plugin has been initialized using an options object that does not match the API schema.
 - options.chunkFilename should be one of these:
   string | function
   Details:
    * options.chunkFilename should be a string.
    * options.chunkFilename should be an instance of function."
`;

exports[`validate options should throw an error on the "filename" option with "true" value 1`] = `
"Invalid options object. Mini CSS Extract Plugin has been initialized using an options object that does not match the API schema.
 - options.filename should be one of these:
   string | function
   Details:
    * options.filename should be a string.
    * options.filename should be an instance of function."
`;

exports[`validate options should throw an error on the "ignoreOrder" option with "1" value 1`] = `
"Invalid options object. Mini CSS Extract Plugin has been initialized using an options object that does not match the API schema.
 - options.ignoreOrder should be a boolean."
`;

exports[`validate options should throw an error on the "insert" option with "{}" value 1`] = `
"Invalid options object. Mini CSS Extract Plugin has been initialized using an options object that does not match the API schema.
 - options.insert should be one of these:
   string | function
   -> Inserts \`<link>\` at the given position (https://github.com/webpack-contrib/mini-css-extract-plugin#insert).
   Details:
    * options.insert should be a string.
    * options.insert should be an instance of function."
`;

exports[`validate options should throw an error on the "insert" option with "1" value 1`] = `
"Invalid options object. Mini CSS Extract Plugin has been initialized using an options object that does not match the API schema.
 - options.insert should be one of these:
   string | function
   -> Inserts \`<link>\` at the given position (https://github.com/webpack-contrib/mini-css-extract-plugin#insert).
   Details:
    * options.insert should be a string.
    * options.insert should be an instance of function."
`;

exports[`validate options should throw an error on the "insert" option with "true" value 1`] = `
"Invalid options object. Mini CSS Extract Plugin has been initialized using an options object that does not match the API schema.
 - options.insert should be one of these:
   string | function
   -> Inserts \`<link>\` at the given position (https://github.com/webpack-contrib/mini-css-extract-plugin#insert).
   Details:
    * options.insert should be a string.
    * options.insert should be an instance of function."
`;

exports[`validate options should throw an error on the "linkType" option with "[]" value 1`] = `
"Invalid options object. Mini CSS Extract Plugin has been initialized using an options object that does not match the API schema.
 - options.linkType should be one of these:
   \\"text/css\\" | boolean
   Details:
    * options.linkType should be \\"text/css\\".
    * options.linkType should be a boolean."
`;

exports[`validate options should throw an error on the "linkType" option with "{}" value 1`] = `
"Invalid options object. Mini CSS Extract Plugin has been initialized using an options object that does not match the API schema.
 - options.linkType should be one of these:
   \\"text/css\\" | boolean
   Details:
    * options.linkType should be \\"text/css\\".
    * options.linkType should be a boolean."
`;

exports[`validate options should throw an error on the "linkType" option with "1" value 1`] = `
"Invalid options object. Mini CSS Extract Plugin has been initialized using an options object that does not match the API schema.
 - options.linkType should be one of these:
   \\"text/css\\" | boolean
   Details:
    * options.linkType should be \\"text/css\\".
    * options.linkType should be a boolean."
`;

exports[`validate options should throw an error on the "linkType" option with "invalid/type" value 1`] = `
"Invalid options object. Mini CSS Extract Plugin has been initialized using an options object that does not match the API schema.
 - options.linkType should be one of these:
   \\"text/css\\" | boolean
   Details:
    * options.linkType should be \\"text/css\\".
    * options.linkType should be a boolean."
`;

exports[`validate options should throw an error on the "unknown" option with "/test/" value 1`] = `
"Invalid options object. Mini CSS Extract Plugin has been initialized using an options object that does not match the API schema.
 - options has an unknown property 'unknown'. These properties are valid:
   object { filename?, chunkFilename?, ignoreOrder?, insert?, attributes?, linkType?, query? }"
`;

exports[`validate options should throw an error on the "unknown" option with "[]" value 1`] = `
"Invalid options object. Mini CSS Extract Plugin has been initialized using an options object that does not match the API schema.
 - options has an unknown property 'unknown'. These properties are valid:
   object { filename?, chunkFilename?, ignoreOrder?, insert?, attributes?, linkType?, query? }"
`;

exports[`validate options should throw an error on the "unknown" option with "{"foo":"bar"}" value 1`] = `
"Invalid options object. Mini CSS Extract Plugin has been initialized using an options object that does not match the API schema.
 - options has an unknown property 'unknown'. These properties are valid:
   object { filename?, chunkFilename?, ignoreOrder?, insert?, attributes?, linkType?, query? }"
`;

exports[`validate options should throw an error on the "unknown" option with "{}" value 1`] = `
"Invalid options object. Mini CSS Extract Plugin has been initialized using an options object that does not match the API schema.
 - options has an unknown property 'unknown'. These properties are valid:
   object { filename?, chunkFilename?, ignoreOrder?, insert?, attributes?, linkType?, query? }"
`;

exports[`validate options should throw an error on the "unknown" option with "1" value 1`] = `
"Invalid options object. Mini CSS Extract Plugin has been initialized using an options object that does not match the API schema.
 - options has an unknown property 'unknown'. These properties are valid:
   object { filename?, chunkFilename?, ignoreOrder?, insert?, attributes?, linkType?, query? }"
`;

exports[`validate options should throw an error on the "unknown" option with "false" value 1`] = `
"Invalid options object. Mini CSS Extract Plugin has been initialized using an options object that does not match the API schema.
 - options has an unknown property 'unknown'. These properties are valid:
   object { filename?, chunkFilename?, ignoreOrder?, insert?, attributes?, linkType?, query? }"
`;

exports[`validate options should throw an error on the "unknown" option with "test" value 1`] = `
"Invalid options object. Mini CSS Extract Plugin has been initialized using an options object that does not match the API schema.
 - options has an unknown property 'unknown'. These properties are valid:
   object { filename?, chunkFilename?, ignoreOrder?, insert?, attributes?, linkType?, query? }"
`;

exports[`validate options should throw an error on the "unknown" option with "true" value 1`] = `
"Invalid options object. Mini CSS Extract Plugin has been initialized using an options object that does not match the API schema.
 - options has an unknown property 'unknown'. These properties are valid:
   object { filename?, chunkFilename?, ignoreOrder?, insert?, attributes?, linkType?, query? }"
`;
